compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__try___in_block.snap
---
source: compiler-core/src/erlang/tests/try_.rs
assertion_line: 29
expression: "pub fn main() {\n  {\n    try b = Error(Nil);\n    b\n  }\n  Ok(1)\n}"
---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> {ok, integer()} | {error, any()}.
main() ->
    case {error, nil} of
        {error, _try} -> {error, _try};
        {ok, B} ->
            B
    end,
    {ok, 1}.

